    - Fixed fish spawning.
    - Removed [item=cliff-explosives] from all planets except [planet=vulcanus].
    - Fixed that concrete was removing egg rafts and stromatolites on [planet=gleba].
    - Fixed that the selling part of ranking up an item to gold stars didn't count.
    - Fixed that sink mode trade conversion was skipping some items randomly.
    - Fixed belt capacity tech.
  Balancing:
    - Supercharging is now unlocked on [planet=vulcanus].
    - Quality trades now have a trade productivity decrement based on the tier of quality, e.g. an uncommon trade loses 35% productivity.
      Negative productivity will decrease the trade's output rate, e.g. -100% prod means 1/2 of normal output rate, -200% prod means 1/3 of normal output rate, etc.
      This prevents the exploit of quickly generating unlimited [item=hexaprism-coin] on Nauvis before you have to visit other planets.
    - Trade productivity bars are now tracked separately for each quality, preventing easy exploits for high quality items.
    - The spawn hex on [planet=gleba] now generates with a starting amount of [entity=yumako-tree] and [entity=jellystem].
    - Improved the quest reward of "It's Just a Scratch".
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 27/5/25
  Major Features:
    - Added [planet=aquilo].
    - Added endgame resource on [planet=nauvis].
  Features:
    - Added energized thruster fuel and oxidizer recipes.
    - Added crystalline fuel as a burnable fuel.
  Minor Features:
    - Item/fluid names now show in the custom tooltips seen in trades and initial resources UI.
    - A tooltip now shows for coin amounts if they are abbreviated with units like "k" or "M".
  Changes:
    - [planet=vulcanus], [planet=fulgora], and [planet=gleba] now have three trades per hex instead of two.
    - [planet=vulcanus], [planet=fulgora], and [planet=gleba] now have finite planet size.